# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200419_1738.py
config/: settings.py  urls.py  wsgi.py
config/templates/: index.html
root/: db.sqlite3
root/root/: settings.py
tasks/: admin.py  filter.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20200426_1544.py  0003_auto_20200426_1545.py  0004_auto_20200426_1546.py  0005_auto_20200426_1549.py
templates/: base.html  index.html
templates/accounts/: password_change.html  password_change_done.html  profile.html
templates/registration/: login.html  password_change.html  password_change_done.html  registration.html
templates/tasks/: index.html  tag_list.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html  task_status_list.html
templates/tasks/statuses/: task_status_confirm_delete.html  task_status_form.html  task_status_list.html
templates/tasks/tags/: tag_confirm_delete.html  tag_form.html  tag_list.html
