[tool.poetry]
name = "uladzislau97-task-manager"
version = "0.1.0"
description = "Task management system"
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Uladzislau97/python-project-lvl4"
repository = "https://github.com/Uladzislau97/python-project-lvl4"
documentation = "https://github.com/Uladzislau97/python-project-lvl4"

keywords = [
    "task-manager",
    "task manager",
    "task management"
]

classifiers = [
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
django-bootstrap4 = "^1.1"
rollbar = "^0.14.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
