[tool.poetry]
name = "uladzislau97-task-manager"
version = "0.2.0"
description = "Task manager"
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Uladzislau97/python-project-lvl4"
repository = "https://github.com/Uladzislau97/python-project-lvl4"
documentation = "https://github.com/Uladzislau97/python-project-lvl4"

keywords = [
    "task manager",
    "task-manager"
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
django-bootstrap4 = "^1.1.1"
rollbar = "^0.15.0"
psycopg2-binary = "^2.8.5"
django-heroku = "^0.3.1"
python-dotenv = "^0.12.0"
coverage = "^5.0.4"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
